Fixing search bar on mobile

--- a/src/scss/search-bar.scss
+++ b/src/scss/search-bar.scss
@@ -3,7 +3,7 @@ form#search-form {
     margin-top: 2px;
 
     & input {
-        width: 80%;
+        width: 79%;
         padding-top: 10px;
     }
 
@@ -19,4 +19,8 @@ form#search-form {
 
 form.form-single {
     width: 80% !important;
+}
+
+.input-group {
+    width: 20% !important;
 }
